--- a/templates/project-list-answers.html
+++ b/templates/project-list-answers.html
@@ -110,7 +110,7 @@ h2 { margin-top: 1.5em; }
               </a>
             </td>
             <td>
-              <div style="float: right">
+              <div style="float: right; margin: 0 0 .25em .25em;">
               {% if answer.reviewed == 0 %}<span class="label label-danger">New</span>{% endif %}
               {% if answer.reviewed == 1 %}<span class="label label-info">Reviewed</span>{% endif %}
               {% if answer.reviewed == 2 %}<span class="label label-success">Approved</span>{% endif %}
