--- a/templates/base.html
+++ b/templates/base.html
@@ -142,9 +142,9 @@
 
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">
-                {% with picture=request.user.get_profile_picture %}
-                  {% if picture %}
-                    <img src="{{picture.url}}" height="30" alt="Profile Picture"
+                {% with url=request.user.get_profile_picture_absolute_url %}
+                  {% if url %}
+                    <img src="{{url}}" height="30" alt="Profile Picture"
                       style="margin: -5px 5px;">
                   {% endif %}
                 {% endwith %}
