--- a/templates/authoring-tool-modal.html
+++ b/templates/authoring-tool-modal.html
@@ -157,7 +157,7 @@
             <label for="authoring_tool_qmoduleprotocol" class="col-sm-2 control-label">Protocol ID</label>
             <div class="col-sm-10">
               <input type="text" class="form-control" id="authoring_tool_qmoduleprotocol" name="protocol">
-              <span class="help-block">Instead of a module, you can also enter a protocol ID to make available any compliance app that satisfies this protocol.</span>
+              <span class="help-block">Enter a protocol ID to allow the user to choose any compliance app that satisfies this protocol.</span>
             </div>
           </div>
           </div>
