--- a/templates/question.html
+++ b/templates/question.html
@@ -882,7 +882,7 @@ function record_interaction() {
 <style>.dropdown-menu.textcomplete-dropdown { z-index: 99999 !important; }</style> {# show over modal #}
 <script>
 $(function() {
-  init_question_authoring_tool({
+  init_authoring_tool({
     task: {{task.id}},
     module: {{task.module.spec|json}},
     questions: {
