--- a/templates/authoring-tool-modal.html
+++ b/templates/authoring-tool-modal.html
@@ -1,3 +1,31 @@
+<div id="module_authoring_tool" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="module_authoring_tool_title" aria-hidden="true" data-keyboard="false">
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+        <h4 class="modal-title" id="module_authoring_tool_title">
+          Edit Module
+        </h4>
+      </div>
+      <div class="modal-body">
+        <form class="form-horizontal" onsubmit="return false;">
+          <div class="form-group">
+            <label for="authoring_tool_mspec" class="col-sm-2 control-label">Specification</label>
+            <div class="col-sm-10">
+              <textarea class="form-control" id="authoring_tool_mspec" name="spec">{ }</textarea>
+              <span class="help-block">Module definition in YAML.</span>
+            </div>
+          </div>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
+        <button type="button" class="btn btn-success" onclick="authoring_tool_save_module()">Save Changes</button>
+      </div>
+    </div>
+  </div>
+</div>
+
 <div id="question_authoring_tool" class="modal fade" tabindex="-1" role="dialog" aria-labelledby="question_authoring_tool_title" aria-hidden="true" data-keyboard="false">
   <div class="modal-dialog modal-lg">
     <div class="modal-content">
@@ -154,7 +182,7 @@
       <div class="modal-footer">
         <button type="button" class="btn btn-danger" onclick="authoring_tool_delete_question()">Delete Question</button>
         <button type="button" class="btn btn-default" data-dismiss="modal">Cancel</button>
-        <button type="button" class="btn btn-success" onclick="authoring_tool_save_changes()">Save Changes</button>
+        <button type="button" class="btn btn-success" onclick="authoring_tool_save_question()">Save Changes</button>
       </div>
     </div>
   </div>
