Fix cancel link in start apps page

--- a/templates/project-startapps.html
+++ b/templates/project-startapps.html
@@ -97,7 +97,7 @@
   </div> <!-- /question -->
 {% endfor %}
 
-<span><a href="{{parent_project.get_absolute_url}}">Cancel</a></span>&nbsp;
+<span><a href="{{project.get_absolute_url}}">Cancel</a></span>&nbsp;
 <button class="btn btn-primary" onclick="start_apps();">Start Apps &raquo;</button>
 
 {% endblock %}
