Shift back to cookie crumbs top of page
Replace hierarchial represenation of current location with
cookie crumb representation. Remove app icons because icons
broke up reading text. Also push "Progress" display down lower on page
to improve grid.

--- a/templates/question.html
+++ b/templates/question.html
@@ -487,7 +487,7 @@ label:hover .onhover { display: inline; }
   </div> <!-- /col -->
 
   <div class="col-md-3">
-    <div id="question-history-context" style="border:0px solid black; max-height:600px; overflow-y:scroll; padding:4px;">
+    <div id="question-history-context" style="border:0px solid black; max-height:600px; overflow-y:scroll; padding:4px; margin-top:110px;">
         <ul>
         {% if context %}
           <p>Progress:</p>
