--- a/templates/task-header.html
+++ b/templates/task-header.html
@@ -46,33 +46,21 @@
   </p>
   {% endif %}
   {% endwith %}
+  <p style="font-size: 90%;margin-top:20px;">
   {% for parent_project in task.project.get_parent_projects %}
-  <p style="font-size: 110%; margin-left: 15px;">
-    {% if parent_project.root_task.get_app_icon_url %}
-      <img src="{{parent_project.root_task.get_app_icon_url}}" style="height: 1em">
-    {% else %}
-      <span class="glyphicon glyphicon-list-alt"></span>
-    {% endif %}
     <a href="{{parent_project.get_absolute_url}}">
       {{parent_project.title}}
     </a>
-  </p>
+  &gt;
   {% endfor %}
-  <p style="font-size: 110%; margin-left: 15px;">
-    {% if task.project.root_task.get_app_icon_url %}
-      <img src="{{task.project.root_task.get_app_icon_url}}" style="height: 1em">
-    {% else %}
-      <span class="glyphicon glyphicon-list-alt"></span>
-    {% endif %}
     <a href="{{task.project.get_absolute_url}}">
       {{task.project.title}}
     </a>
-  </p>
+  &gt;
   {% endif %}
-  <p style="font-size: 100%; margin-left: 30px;">
-      <span class="glyphicon glyphicon-th-list" style="margin-right: .25em"></span>
+      <!-- <span class="glyphicon glyphicon-th-list" style="margin-right: .25em"></span> -->
     {{task.title}}
-  </p>
+
 </div>
 
 <div id="auth-status">
