--- a/templates/project-base.html
+++ b/templates/project-base.html
@@ -26,30 +26,22 @@
       <span class="folder_action" onclick="rename_folder();"><span class="glyphicon glyphicon-pencil"></span></span>
     {% endif %}
   </p>
+  <p style="font-size: 90%;margin-top:20px;">
   {% for parent_project in project.get_parent_projects %}
-  <p style="font-size: 110%; margin-left: 15px;">
-    {% if parent_project.root_task.get_app_icon_url %}
-    <img src="{{parent_project.root_task.get_app_icon_url}}" style="height: 1em">
-    {% else %}
-    <span class="glyphicon glyphicon-list-alt"></span>
-    {% endif %}
+    {% if not forloop.counter == 1 %} &gt; {% endif %}
     <a href="{{parent_project.get_absolute_url}}" style="margin-left: .25em">
       {{parent_project.title}}
     </a>
-  </p>
   {% endfor %}
   {% if not is_project_page %}
-  <p style="font-size: 110%; margin-left: 15px;">
-    {% if project.root_task.get_app_icon_url %}
-      <img src="{{project.root_task.get_app_icon_url}}" style="height: 1em">
-    {% else %}
-      <span class="glyphicon glyphicon-list-alt"></span>
-    {% endif %}
     <a href="{{project.get_absolute_url}}">
       {{project.title}}
     </a>
-  </p>
   {% endif %}
+  {% if project.get_parent_projects|length > 0 %}
+  &gt;
+  {% endif %}
+  {{project.title}}
 </div>
 
 <div class="row">
