normalize Module.key by renaming to Module.module_name and removing the source namespace and AppInstance appname from the start of the value so that it just holds the Module's relative path from the app directory so that the field isn't redundant with the fields in related tables
For old Module instances that are not tied to a AppInstance, leave the field's value as it was.

--- a/templates/project.html
+++ b/templates/project.html
@@ -717,7 +717,7 @@ $(function() {
       {% endfor %}
     },
     answer_type_modules: [{% for m in project.root_task.module.get_referenceable_modules %}
-      { id: "{{m.id}}", title: "{{m.title|escapejs}} ({{m.key}})" }{% if not forloop.last %},{% endif %}
+      { id: "{{m.id}}", title: "{{m.title|escapejs}} ({{m.module_name}})" }{% if not forloop.last %},{% endif %}
       {% endfor %}],
     autocomplete_questions: { }
   });
